Styles: fixed dark mode settings page bug
fixed dark mode settings page bug
added interactive cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,8 @@
 
 @media screen and (max-width:768px) {
   .App {
-    flex-direction: column
+    flex-direction: column;
+    height: 100vh !important;
   }
 }
 
