--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -75,7 +75,6 @@
         width: 100% !important;
         padding: 1rem 2rem !important;
         margin-top: 2rem !important;
-        height: 100% !important;
         .user__form {
             margin-top: 1rem;
             // display: flex;
